--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,6 +13,7 @@
 # ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 name: Build and Publish Docker Container
+
 on:
   schedule:
     - cron: '5 4 * * SUN'
@@ -37,19 +38,19 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
 
       - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -59,34 +60,25 @@ jobs:
         id: check-schedule
         run: |
           if [[ "${{ github.event_name }}" == "schedule" ]]; then
-            echo "::set-output name=tag::latest"
+            echo "tag=latest" >> $GITHUB_OUTPUT
           else
-            echo "::set-output name=tag::"
-          fi
-
-      - name: Check for Version Tag
-        id: check-version-tag
-        run: |
-          VERSION_TAG=$(echo ${{ github.ref }} | sed -n 's/refs\/tags\/v\([0-9.]*\)$/\1/p')
-          if [[ -n "$VERSION_TAG" ]]; then
-            echo "::set-output name=version-tag::${VERSION_TAG}"
+            echo "tag=" >> $GITHUB_OUTPUT
           fi
 
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=tag,enable=${{ endsWith(github.ref, 'tags/latest') }}
             type=sha
             type=ref,event=branch,exclude=latest
-            ${{ steps.check-version-tag.outputs.version-tag }}
             ${{ steps.check-schedule.outputs.tag }}
 
       - name: Build and push Docker image
         id: build-and-push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/amd64,linux/arm/v7,linux/arm64
